css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background-image: linear-gradient(to bottom, #029688 14vh, #CCCCCC 10vh);
}

.boolzapp-container {
    position: relative;
    width: 1200px;
    max-width: 100%;
    height: calc(100vh - 150px);
    background-color: #fff;
}

.boolzapp-container .left-side {
    position: relative;
    flex: 30%;
    background-color: #fff;
    border-right: 0.5px solid rgba(0, 0, 0, 0.2);
}

.boolzapp-container .right-side {
    overflow: auto;
    position: relative;
    flex: 70%;
    background-image: url(../img/mine.jpg);
}

.header {
    position: relative;
    width: 100%;
    height: 65px;
    background: #EDEDED;
}

.padd-img {
    padding: 0 15px;
}

.user-img {
    position: relative;
    width: 40px;
    height: 40px;
    overflow: hidden;
    border-radius: 50%;
}

.user {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.padd-icons {
    padding-top: 20px;
    padding-right: 15px;
}

.notifications-box {
    position: relative;
    width: 100%;
    height: 60px;
    background: #76daff;
    font-size: 0.8em;
}

.notifications-box i {
    position: relative;
    left: 13px;
    background: #fff;
    padding: 12px 10px;
    width: 45px;
    height: 45px;
    font-size: 20px;
    border-radius: 55%;
    cursor: pointer;
    color: #76daff;
}

.notifications-text {
    margin: 25px;
}

.notifications-text a {
    color: grey
}

.notifications-text a:hover {
    color: #0080b2;
}

.search-container {
    position: relative;
    width: 100%;
    height: 40px;
    background: #f6f6f6;
}

.search-container .input i {
    position: absolute;
    left: 26px;
    top: 14px;
    color: #bbb;
    font-size: 0.8em;
}

.search-container .input input {
    width: 340px;
    outline: none;
    border: none;
    background: #fff;
    padding: 5px;
    height: 30px;
    border-radius: 10px;
    font-size: 12px;
    padding-left: 60px;
    margin: 10px;
}

.chat-list {
    position: relative;
    height: calc(100% - 165px);
    overflow-y: auto;
}

.chat-box {
    position: relative;
    width: 100%;
    padding: 15px;
    border-bottom: 1px solid #eee;
}

.chat-box:hover {
    background-color: #02968750;
}

.img-container {
    position: relative;
    width: 67px;
    height: 55px;
    overflow: hidden;
    border-radius: 50%;
}

.img-user-chat {
    width: 100%;
    object-fit: cover; 
}

.user-message {
    font-size: 14px;
    color: grey;
}

.text-message {
    padding-left: 40px;
    font-size: 13px;
    color: grey;
}

.chat-container {
    position:relative;
    width: 100%;
    height: calc(100% - 120px);
    overflow-y: auto;
}

.empty-chat {
    height: 334px;
}

.message-box {
    position: relative;
    width: 100%;
    margin: 5px 0;
}

.message-box p {
    word-break: break-all;
    position: relative;
    right: 0;
    text-align: right;
    max-width: 65%;
    padding: 12px;
    border-radius: 10px;
    font-size: 0.9em;
    margin: 5px 25px;
}

.my-mess {
    background: #dcf8c6;
}

.friend-mess {
    background: #fff;
}

.time-sms {
    display: block;
    margin-top: 5px;
    font-size: 0.8em;
    opacity: 0.5;
}

.chat-details {
    width: 100%;
}

.chat-input {
    position: absolute;
    width: 100%;
    height: 55px;
    background: #f0f0f0;
    bottom: 0;
}

.chat-input i:hover {
    color: #029688;
}

i.fa-solid.fa-microphone.fa-lg, .fa-regular.fa-face-smile.fa-lg {
    padding: 0 25px;
}

ul i:hover {
    color: #029688;
}

p.friend-mess i {
    display: none;
}

p.friend-mess:hover i {
    display: inline;
    cursor: pointer;
}

p.my-mess i {
    display: none;
}

p.my-mess:hover i {
    display: inline;
    cursor: pointer;
}

